# lustre-reporter

./: .gitignore  INSTALL_FOR_AI.md  LICENSE  README.md  config.example.json  pyproject.toml
.claude/: launch.json
lustre_reporter/: __init__.py  __main__.py  cli.py  config.py  daily_report.py  emf.py  emf_publish.py  publish.py  server.py  util.py
lustre_reporter/analysis/: __init__.py  backport.py  emf_stability.py  forecast.py  stability.py
lustre_reporter/sources/: __init__.py  atlassian.py  confluence.py  gerrit.py  git_tags.py  github.py  jira.py  maloo.py  slack.py  teams.py
scripts/: com.ddn.lustre-reporter.plist  daemon.sh  exa_reporter_daemon.sh  gen_icon.py  lustre_reporter_daemon.sh  make-dmg.sh  make-macos-app.sh  run.sh  test.sh
static/: app.js  icons.js  index.html  style.css
tests/: conftest.py  test_analysis_backport.py  test_analysis_emf_stability.py  test_analysis_forecast.py  test_cli.py  test_config.py  test_daily_report.py  test_emf.py  test_emf_publish.py  test_main.py  test_publish.py  test_server.py  test_sources_atlassian.py  test_sources_confluence.py  test_sources_gerrit.py  test_sources_git_tags.py  test_sources_github.py  test_sources_jira.py  test_sources_maloo.py  test_sources_slack.py  test_stability.py  test_teams.py  test_util.py
